devops-class-main/Kubernetes Ingress, ConfigMaps & Secrets/03-ingress/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one-svc
  namespace: session12
spec:
  type: ClusterIP        # Ingress reaches Pods through a ClusterIP Service
  selector:
    app: app-one
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-two-svc
  namespace: session12
spec:
  type: ClusterIP
  selector:
    app: app-two
  ports:
    - port: 80
      targetPort: 80
